# rl_qwen

qwen25-grpo-gsm8k/: .gitignore  README.md  pyproject.toml
qwen25-grpo-gsm8k/configs/: grpo_qwen25_1_5b.yaml
qwen25-grpo-gsm8k/qwen25_grpo_gsm8k.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qwen25-grpo-gsm8k/scripts/: download_dataset.py  download_model.py  eval_acc1.sh  eval_passk_majk.sh  train_grpo.sh
qwen25-grpo-gsm8k/src/: __init__.py
qwen25-grpo-gsm8k/src/data/: prepare_gsm8k.py
qwen25-grpo-gsm8k/src/eval/: eval_acc1.py  eval_passk_majk.py  summarize_results.py
qwen25-grpo-gsm8k/src/rewards/: __init__.py  gsm8k_reward.py
qwen25-grpo-gsm8k/src/train/: train_grpo.py
qwen25-grpo-gsm8k/src/utils/: answer_extract.py  config.py  logging_utils.py
